# Arquitera_Hexagonal_Python

./: .coverage  .gitignore  Readme.md  dockerfile  pyproject.toml
src/: __init__.py  configuration.py  main.py  sample.db
src/adapters/: Readme.md  __init__.py
src/adapters/Cache/: __init__.py
src/adapters/Cache/Redis/: Redis.py
src/adapters/Clud_Provider/: __init__.py
src/adapters/Clud_Provider/GCP/: Bucket_Provider.py  __init__.py
src/adapters/Database/: __init__.py
src/adapters/Database/SQLite/: Sqlite.py  __init__.py
src/adapters/Queue/: __init__.py
src/adapters/Queue/Rabbit/: Rabbit.py
src/domains/: Readme.md  __init__.py
src/domains/actions/: __init__.py
src/domains/actions/Cache/: Cache_A.py  __init__.py
src/domains/actions/Clud_Provider/: __init__.py
src/domains/actions/Database/: Database_A.py  __init__.py
src/domains/actions/Example/: Example_A.py  __init__.py
src/domains/actions/Queue/: Queue_A.py  __init__.py
src/domains/entities/: User.py
src/domains/interfaces/: __init__.py
src/domains/interfaces/Cache/: Cache_I.py  __init__.py
src/domains/interfaces/Clud_Provider/: __init__.py
src/domains/interfaces/Database/: Database_I.py  __init__.py
src/domains/interfaces/Example/: Example_I.py  __init__.py
src/domains/usecases/: __init__.py
src/routes/: Readme.md  __init__.py
src/routes/Example/: Example.py
src/routes/Route_test_api/: Route_test_api.py  __init__.py
tests/domains/entities/: test_User.py
tests/routes/Example/: test_Example.py
tests/routes/TestRoute/: test_test_route.py
(+18 files in other folders)
